# nrk-podcast-rss

./: .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml
app/: Dockerfile  app.py  const.py  pyproject.toml  rssextractor.py
app/config/: config.ini  podcast_config_parser.py
app/tests/: test_podcast_config_parser.py
config/: config.ini  config.json
