[tool.poetry]
name = "nrk-rss-app"
version = "0.1.0"
description = ""
authors = ["thorbjoernl <51087536+thorbjoernl@users.noreply.github.com>"]
license = "GPLv2"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.7.6"
podgen = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
